Fix layout issues in IE8

--- a/teachers_digital_platform/css/pages/tdp-activity-search.less
+++ b/teachers_digital_platform/css/pages/tdp-activity-search.less
@@ -96,8 +96,8 @@
     .content_main {
         border: 0;
 
-        &::after {
-            border: 0;
+        &:after {
+            display: none;
         }
     }
 
@@ -153,12 +153,28 @@
         li {
             max-width: 100%;
         }
+
+        .lt-ie9 & {
+            padding-left: unit( 30px / @base-font-size-px, em );
+        }
     }
 
     .results_footer {
         .respond-to-min(@bp-med-min, {
             padding-left: unit( 30px / @base-font-size-px, em );
         });
+
+        .lt-ie9 & {
+            padding-left: unit( 30px / @base-font-size-px, em );
+
+            .m-pagination_btn-next {
+                left: unit( 150px / @base-font-size-px, em );
+            }
+
+            .o-well {
+                margin-top: unit( 30px / @base-font-size-px, em );
+            }
+        }
     }
 
     .results__full {
